perf(cicd): 增大 Maven 构建容器资源配置
- CPU: requests 500m→1, limits 2→4
- Memory: requests 1Gi→2Gi, limits 4Gi→8Gi
- MAVEN_OPTS: Xmx 1024m→4096m, Xms 512m→1024m
- 支持大型 Java 项目编译（多模块/Lombok/注解处理器等）